--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 requests==2.31.0
+feedparser==6.0.10
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.2.0
+google-api-python-client==2.100.0
 python-dotenv==1.0.0
-schedule==1.2.0
-APScheduler==3.10.0
