--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,13 @@
-FACEBOOK_APP_ID=1542825426840282
-FACEBOOK_APP_SECRET=0f7b7ec5e345b9b49395...
-FACEBOOK_PAGE_ID=YOUR_PAGE_ID_HERE
-INSTAGRAM_BUSINESS_ACCOUNT_ID=YOUR_INSTAGRAM_ACCOUNT_ID
-INSTAGRAM_PAGE_ACCESS_TOKEN=YOUR_PAGE_ACCESS_TOKEN_HERE
+# Facebook Forex News Automation - Environment Variables
 
-POST_HOUR=9
-POST_MINUTE=0
-TIME_ZONE=Asia/Kolkata
+# Facebook Graph API Credentials
+FACEBOOK_PAGE_ID=your_facebook_page_id_here
+FACEBOOK_PAGE_TOKEN=your_long_lived_page_token_here
 
-GRAPH_API_VERSION=v19.0
-REQUEST_TIMEOUT=30
-RETRY_ATTEMPTS=3
+# Google Sheets API (for logging posts)
+GOOGLE_SHEETS_ID=your_google_sheets_id_here
+GOOGLE_CREDENTIALS_JSON={"type": "service_account", "project_id": "...", "private_key_id": "...", "private_key": "...", "client_email": "...", "client_id": "...", "auth_uri": "https://accounts.google.com/o/oauth2/auth", "token_uri": "https://oauth2.googleapis.com/token", "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs", "client_x509_cert_url": "..."}
 
+# Logging
 LOG_LEVEL=INFO
 LOG_FILE=auto_poster.log
